# hikari

./: .gitignore  BVH.cpp  BVH.h  Bounds3.h  CMakeLists.txt  Camera.cpp  Camera.h  Intersection.h  Material.h  Object.h  README.md  Ray.h  Reflection.h  Renderer.h  Scene.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.h  Vectors.h  a.out  main.cpp
lib/: minipbrt.cpp  minipbrt.h
lib/tiny_obj_loader/: tiny_obj_loader.cc
results/: diff+spe128.ppm  diff+spe256.ppm  diff+spe4.ppm  diffuSpeGlossy256.ppm  diffuSpeGlossy64spp.ppm  diffuse128.ppm  diffuse4.ppm  diffuse64spp.ppm  image.ppm
scene/: cornell-box.pbrt
src/: Bounds.h  Bounds3.h  Renderer.h  Vectors.h  main.cpp
src/accelerators/: BVH.cpp  BVH.h
src/core/: Camera.cpp  Camera.h  Integrator.cpp  Integrator.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  Primitive.cpp  Primitive.h  Ray.h  Reflection.cpp  Reflection.h  Scene.cpp  Scene.h  Shape.h  api.cpp  api.h  fileutil.cpp  fileutil.h  hikari.h  paramset.cpp  paramset.h  parser.cpp  parser.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h
src/integrators/: whitted.cpp  whitted.h
src/lights/: diffuse.cpp  diffuse.h
src/main/: hikari.cpp
src/materials/: matte.cpp  matte.h
src/shapes/: Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
